--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     compile "org.grails.plugins:scaffolding"
     compile "org.grails:grails-plugin-gsp"
     compile "org.grails.plugins:events"
-    compile "org.grails.plugins:views-json"
-    compile "org.grails.plugins:views-json-templates"
+//    compile "org.grails.plugins:views-json"
+//    compile "org.grails.plugins:views-json-templates"
     compile "org.grails.plugins:gsp"
     console "org.grails:grails-console"
     profile "org.grails.profiles:webpack"
