--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "version": "0.0.1",
   "description": "A profile for creating applications with node-based frontends using webpack",
   "main": "index.js",
-  "repository": {
-
-  },
+  "repository": {},
   "scripts": {
     "start": "webpack --progress --watch",
     "bundle": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
-  "devDependencies": {
-    "webpack": "2.4.1"
-  },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "webpack": "2.4.1"
   }
 }
