--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,7 @@ assets {
 
     minifyOptions = [
         languageMode: 'ES6',
-        targetLanguage: 'ES5', //Can go from ES6 to ES5 for those bleeding edgers
+        targetLanguage: 'ES5',
         optimizationLevel: 'SIMPLE'
     ]
     excludes = ['**/*.sass']
