--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,23 @@ out/
 yarn.lock
 node_modules
 grails-app/assets/javascripts/bundle*.js
+
+
+# Created by https://www.gitignore.io/api/vim
+
+### Vim ###
+# swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
+
+# End of https://www.gitignore.io/api/vim
+
