Package renamed with new name

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: webpack
     codegen:
-        defaultPackage: zuluboard
+        defaultPackage: com.unzulua.board
     spring:
         transactionManagement:
             proxies: false
