--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile "org.grails.plugins:gsp"
     console "org.grails:grails-console"
     compile 'com.bertramlabs.plugins:sass-asset-pipeline:2.14.7'
+    compile 'org.grails.plugins:external-config:1.1.2'
 
     compile project(':grails-trello')
 
